# power-user-linux-setup

./: .gitignore  404.html  LICENSE  README.md  apt_packages.html  docker.html  fonts.html  games.html  git.html  github.html  gnome_extensions.html  golang.html  index.html  js.html  kubernetes.html  locale.html  mkdocs.yml  pyproject.toml  python.html  requirements-docs.txt  requirements.txt  sitemap.xml  ssh.html  zsh.html
.github/workflows/: publish_on_push.yml
apt_packages/: index.html
browsers/: index.html
cloud/: index.html
docker/: index.html
docs/: apt_packages.md  browsers.md  cloud.md  docker.md  extras.md  fonts.md  games.md  git.md  github.md  gitlab.md  gnome_extensions.md  golang.md  index.md  input_devices.md  install.md  js.md  kubernetes-dev.md  kubernetes-server.md  kubernetes.md  locale.md  networking.md  python.md  shortcuts.md  ssh.md  zsh.md
docs/extra/: extra.css
docs/stylesheets/: extra.css  (+1 more)
extras/: index.html
fonts/: index.html
games/: index.html
git/: index.html
github/: index.html
gitlab/: index.html
gnome_extensions/: index.html
golang/: index.html
input_devices/: index.html
js/: index.html
kubernetes/: index.html
kubernetes-dev/: index.html
kubernetes-server/: index.html
locale/: index.html
networking/: index.html
python/: index.html
scripts/: apt_packages.sh  containers.sh  fonts.sh  games.sh  git.sh  gnome_extensions.sh  golang.sh  kubernetes-efk-stack.sh  python.sh  ssh.sh  zsh.sh  zsh_history_fix.sh
search/: search_index.json
shortcuts/: index.html
ssh/: index.html
zsh/: index.html
