[tool.poetry]
name = "mkdocs-taudelta"
version = "0.1.0"
description = ""
authors = ["\"Teodor Dumitrescu\" <\"teodor.dumitrescu@gmail.com\">"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8.3"
#mkdocs-mermaid2-plugin = "^0.6"
mkdocs-markmap = "^2.2.2"
mkdocs-awesome-pages-plugin = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
